Added business logic for handling /letter. The send snailmail endpoint in messaging is not yet implemented, so there is some stuff left to do when that is in place.
